1pode.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu
  labels:
    app: ubuntu
spec:
  containers:
  - image: ubuntu
    command:
    - "sleep"
    - "604800"
    imagePullPolicy: IfNotPresent
    name: Ubuntu
  RestartPolicy: Always
