pod deployment.yaml
apiVersion: v1
kind: Deployment
metadata
  name: myapp
spec:
  replicas: 3
  selector:
    matchlabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: nginx
          image: nginx
          ports: 
          - containerPort: 80
